--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/demo
-jdbc.username=KaikaiFu
-jdbc.password=SSGAe588943
+jdbc.username=root
+jdbc.password=
